--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,6 @@
-$c-gray: #eee;
+$turquoise: #03839e;
+$yellow: #ffe339;
+$yellowLight: #ffec7a;
+$grey: #b3b3b3;
+$greyLight: #f8f8f8;
+$red: #eb5757;
